--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Init command initialisation</title>
+    <title>Init command initialization</title>
 </head>
 <body>
     <p>ok now!</p>
